<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:padding="16dp">
    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:inputType="textCapWords"
        android:hint="@string/enter_name_of_the_product"/>
    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_price_of_the_product"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">
        <Button
            android:id="@+id/b_add_quantity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/button_add"
            android:padding="0dp"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/et_product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            tools:text="89"
            android:text="@string/default_quantity"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:paddingRight="10dp"/>
        <Button
            android:id="@+id/b_remove_quantity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/button_remove"
            android:padding="0dp"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sales"/>
        <TextView
            android:id="@+id/tv_sales_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="789"
            android:text="@string/default_quantity"/>
    </LinearLayout>
    <EditText
        android:id="@+id/et_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:inputType="phone"
        android:hint="@string/enter_supplier_s_phone"/>
    <Button
        android:id="@+id/b_order_more"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_more"/>
</LinearLayout>